# sequencing-alternating-chips

./: .gitignore  CMakeLists.txt  downloader.py  ga_solver.cpp  ga_solver.h  generator.py  greedy.cpp  instance.py  sbh.cpp  tester.py
exact/: CMakeLists.txt  DNAPath.cpp  DNAPath.h  exact.py  exact_solver.cpp  exact_solver.h  ga_solver.cpp  ga_solver.h  main.cpp  overlapGraph.cpp  overlapGraph.h  pseudocode.cpp
exact/instances/: alt_20_4_20_1840355.xml  alt_20_4_20_9361903.xml  alt_500_10_20_10479321.xml  alt_500_10_20_31877933.xml  alt_500_10_20_34711605.xml  alt_500_10_20_401013.xml  alt_500_8_25_6354152.xml  alt_50_4_20_16320350.xml  test.xml
heuristic/: CMakeLists.txt  ga_solver.cpp  ga_solver.h  individual.cpp  individual.h  main.cpp  tester.py  xml_reader.cpp  xml_reader.h
heuristic/instances/: alt_100_5_20_16034992.xml  alt_250_10_20_32004480.xml  alt_250_10_20_34680537.xml  alt_500_10_20_250786618.xml  alt_500_8_25_35368365.xml
instances/: alt_100_5_20_28156335.xml  alt_250_10_20_12854879.xml  alt_250_10_20_16477148.xml  alt_250_10_20_2895510.xml  alt_500_8_25_24098395.xml  alt_50_4_20_1060213.xml  alt_50_4_20_14648872.xml  notes.txt
instances-small/: alt-pygen_50_6_20_245385500.xml  alt-pygen_50_6_20_392639101.xml  alt-pygen_50_6_20_663052999.xml  alt-pygen_50_6_20_7645825.xml  alt_20_4_20_3876924.xml
pygen_instances/: alt-pygen_500_10_20_510959841.xml  alt-pygen_500_10_20_594542701.xml  alt-pygen_500_10_20_647283010.xml  alt-pygen_500_10_20_673699950.xml  alt-pygen_500_10_20_913012860.xml  alt-pygen_500_7_20_537360693.xml  (+4 more)
